--- a/.gitignore
+++ b/.gitignore
@@ -438,3 +438,143 @@ Assets/Firebase/Editor/AnalyticsDependencies.xml
 Assets/Firebase/Editor.meta
 Assets/Firebase.meta
 Assets/Editor Default Resources/Firebase.meta
+Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_7_0.so.meta
+Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_7_0.so
+Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_7_0.dll.meta
+Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_7_0.dll
+Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_7_0.bundle.meta
+Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_7_0.bundle
+Assets/Firebase/m2repository/com/google/firebase/firebase-storage-unity/12.7.0/firebase-storage-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-storage-unity/12.7.0/firebase-storage-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-storage-unity/12.7.0/firebase-storage-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-storage-unity/12.7.0/firebase-storage-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-storage-unity/12.7.0.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-messaging-unity/12.7.0/firebase-messaging-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-messaging-unity/12.7.0/firebase-messaging-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-messaging-unity/12.7.0/firebase-messaging-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-messaging-unity/12.7.0/firebase-messaging-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-messaging-unity/12.7.0.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-installations-unity/12.7.0/firebase-installations-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-installations-unity/12.7.0/firebase-installations-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-installations-unity/12.7.0/firebase-installations-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-installations-unity/12.7.0/firebase-installations-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-installations-unity/12.7.0.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-functions-unity/12.7.0/firebase-functions-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-functions-unity/12.7.0/firebase-functions-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-functions-unity/12.7.0/firebase-functions-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-functions-unity/12.7.0/firebase-functions-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-functions-unity/12.7.0.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-firestore-unity/12.7.0/firebase-firestore-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-firestore-unity/12.7.0/firebase-firestore-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-firestore-unity/12.7.0/firebase-firestore-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-firestore-unity/12.7.0/firebase-firestore-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-firestore-unity/12.7.0.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-dynamic-links-unity/12.7.0/firebase-dynamic-links-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-dynamic-links-unity/12.7.0/firebase-dynamic-links-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-dynamic-links-unity/12.7.0/firebase-dynamic-links-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-dynamic-links-unity/12.7.0/firebase-dynamic-links-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-dynamic-links-unity/12.7.0.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-database-unity/12.7.0/firebase-database-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-database-unity/12.7.0/firebase-database-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-database-unity/12.7.0/firebase-database-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-database-unity/12.7.0/firebase-database-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-database-unity/12.7.0.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-crashlytics-unity/12.7.0/firebase-crashlytics-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-crashlytics-unity/12.7.0/firebase-crashlytics-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-crashlytics-unity/12.7.0/firebase-crashlytics-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-crashlytics-unity/12.7.0/firebase-crashlytics-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-crashlytics-unity/12.7.0.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-config-unity/12.7.0/firebase-config-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-config-unity/12.7.0/firebase-config-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-config-unity/12.7.0/firebase-config-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-config-unity/12.7.0/firebase-config-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-config-unity/12.7.0.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-auth-unity/12.7.0/firebase-auth-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-auth-unity/12.7.0/firebase-auth-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-auth-unity/12.7.0/firebase-auth-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-auth-unity/12.7.0/firebase-auth-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-auth-unity/12.7.0.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-appcheck-unity/12.7.0/firebase-appcheck-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-appcheck-unity/12.7.0/firebase-appcheck-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-appcheck-unity/12.7.0/firebase-appcheck-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-appcheck-unity/12.7.0/firebase-appcheck-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-appcheck-unity/12.7.0.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-app-unity/12.7.0/firebase-app-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-app-unity/12.7.0/firebase-app-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-app-unity/12.7.0/firebase-app-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-app-unity/12.7.0/firebase-app-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-app-unity/12.7.0.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-analytics-unity/12.7.0/firebase-analytics-unity-12.7.0.srcaar.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-analytics-unity/12.7.0/firebase-analytics-unity-12.7.0.srcaar
+Assets/Firebase/m2repository/com/google/firebase/firebase-analytics-unity/12.7.0/firebase-analytics-unity-12.7.0.pom.meta
+Assets/Firebase/m2repository/com/google/firebase/firebase-analytics-unity/12.7.0/firebase-analytics-unity-12.7.0.pom
+Assets/Firebase/m2repository/com/google/firebase/firebase-analytics-unity/12.7.0.meta
+Assets/Firebase/Editor/FirebaseStorage_version-12.7.0_manifest.txt.meta
+Assets/Firebase/Editor/FirebaseStorage_version-12.7.0_manifest.txt
+Assets/Firebase/Editor/FirebaseRemoteConfig_version-12.7.0_manifest.txt.meta
+Assets/Firebase/Editor/FirebaseRemoteConfig_version-12.7.0_manifest.txt
+Assets/Firebase/Editor/FirebaseMessaging_version-12.7.0_manifest.txt.meta
+Assets/Firebase/Editor/FirebaseMessaging_version-12.7.0_manifest.txt
+Assets/Firebase/Editor/FirebaseInstallations_version-12.7.0_manifest.txt.meta
+Assets/Firebase/Editor/FirebaseInstallations_version-12.7.0_manifest.txt
+Assets/Firebase/Editor/FirebaseFunctions_version-12.7.0_manifest.txt.meta
+Assets/Firebase/Editor/FirebaseFunctions_version-12.7.0_manifest.txt
+Assets/Firebase/Editor/FirebaseFirestore_version-12.7.0_manifest.txt.meta
+Assets/Firebase/Editor/FirebaseFirestore_version-12.7.0_manifest.txt
+Assets/Firebase/Editor/FirebaseDynamicLinks_version-12.7.0_manifest.txt.meta
+Assets/Firebase/Editor/FirebaseDynamicLinks_version-12.7.0_manifest.txt
+Assets/Firebase/Editor/FirebaseDatabase_version-12.7.0_manifest.txt.meta
+Assets/Firebase/Editor/FirebaseDatabase_version-12.7.0_manifest.txt
+Assets/Firebase/Editor/FirebaseCrashlytics_version-12.7.0_manifest.txt.meta
+Assets/Firebase/Editor/FirebaseCrashlytics_version-12.7.0_manifest.txt
+Assets/Firebase/Editor/FirebaseAuth_version-12.7.0_manifest.txt.meta
+Assets/Firebase/Editor/FirebaseAuth_version-12.7.0_manifest.txt
+Assets/Firebase/Editor/FirebaseAppCheck_version-12.7.0_manifest.txt.meta
+Assets/Firebase/Editor/FirebaseAppCheck_version-12.7.0_manifest.txt
+Assets/Firebase/Editor/FirebaseAnalytics_version-12.7.0_manifest.txt.meta
+Assets/Firebase/Editor/FirebaseAnalytics_version-12.7.0_manifest.txt
+Assets/ExternalDependencyManager/Editor/README.md.meta
+Assets/ExternalDependencyManager/Editor/README.md
+Assets/ExternalDependencyManager/Editor/LICENSE.meta
+Assets/ExternalDependencyManager/Editor/Google.VersionHandler.dll.meta
+Assets/ExternalDependencyManager/Editor/external-dependency-manager_version-1.2.185_manifest.txt.meta
+Assets/ExternalDependencyManager/Editor/external-dependency-manager_version-1.2.185_manifest.txt
+Assets/ExternalDependencyManager/Editor/external-dependency-manager_version-1.2.183_manifest.txt.meta
+Assets/ExternalDependencyManager/Editor/external-dependency-manager_version-1.2.183_manifest.txt
+Assets/ExternalDependencyManager/Editor/CHANGELOG.md.meta
+Assets/ExternalDependencyManager/Editor/CHANGELOG.md
+Assets/ExternalDependencyManager/Editor/1.2.185/Google.VersionHandlerImpl.dll.meta
+Assets/ExternalDependencyManager/Editor/1.2.185/Google.VersionHandlerImpl.dll
+Assets/ExternalDependencyManager/Editor/1.2.185/Google.PackageManagerResolver.dll.meta
+Assets/ExternalDependencyManager/Editor/1.2.185/Google.PackageManagerResolver.dll
+Assets/ExternalDependencyManager/Editor/1.2.185/Google.JarResolver.dll.meta
+Assets/ExternalDependencyManager/Editor/1.2.185/Google.JarResolver.dll
+Assets/ExternalDependencyManager/Editor/1.2.185/Google.IOSResolver.dll.meta
+Assets/ExternalDependencyManager/Editor/1.2.185/Google.IOSResolver.dll
+Assets/ExternalDependencyManager/Editor/1.2.185.meta
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.VersionHandlerImpl.dll.meta
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.VersionHandlerImpl.dll
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.PackageManagerResolver.dll.meta
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.PackageManagerResolver.dll
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.JarResolver.dll.meta
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.JarResolver.dll
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.IOSResolver.dll.meta
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.IOSResolver.dll
+Assets/ExternalDependencyManager/Editor/1.2.183.meta
+Assets/ExternalDependencyManager/Editor/1.2.183.meta
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.IOSResolver.dll
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.IOSResolver.dll.meta
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.JarResolver.dll
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.JarResolver.dll.meta
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.PackageManagerResolver.dll
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.PackageManagerResolver.dll.meta
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.VersionHandlerImpl.dll
+Assets/ExternalDependencyManager/Editor/1.2.183/Google.VersionHandlerImpl.dll.meta
+Assets/ExternalDependencyManager/Editor/CHANGELOG.md
+Assets/ExternalDependencyManager/Editor/CHANGELOG.md.meta
+Assets/ExternalDependencyManager/Editor/external-dependency-manager_version-1.2.183_manifest.txt
+Assets/ExternalDependencyManager/Editor/external-dependency-manager_version-1.2.183_manifest.txt.meta
+Assets/ExternalDependencyManager/Editor/Google.VersionHandler.dll.meta
+Assets/ExternalDependencyManager/Editor/LICENSE.meta
+Assets/ExternalDependencyManager/Editor/README.md
+Assets/ExternalDependencyManager/Editor/README.md.meta
